--- a/css/style.css
+++ b/css/style.css
@@ -333,9 +333,9 @@ header .intro-text {
 	text-align: center;
 }
 #about img {
-	border-radius: 50%;
-	width: 160px;
-	height: 160px;
+	border-radius: 15px 50px;
+	width: 20%;
+	height: 20%;
 	display: inline-block;
 }
 #about p {
